--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SendApp</string>
+    <string name="default_web_client_id">147979282609-9gl8mc9u5ao8r6q5i634fieeui3vhdu0.apps.googleusercontent.com</string>
 </resources>
